--- a/src/style/style.css
+++ b/src/style/style.css
@@ -72,11 +72,11 @@ body {
 }
 
 .sidebar {
+  margin: 0;
   background-color: rgb(196, 196, 196);
   list-style-type: none;
   padding: 27px 10px;
   margin-right: 40px;
-  margin-top: 50px;
   align-self: flex-start;
 }
 .sidebar__list {
@@ -89,24 +89,23 @@ body {
 
 .content {
   position: relative;
-  width: 100%;
-  margin-top: 50px;
+  width: 85%;
 }
 .content-brands {
+  display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
-  position: absolute;
   padding: 0;
   margin: 0;
-  top: -40px;
-  left: 0;
   cursor: pointer;
   user-select: none;
+  margin-bottom: 25px;
+  gap: 10px;
 }
 .content-brands__brand {
   background-color: #C4C4C4;
   display: inline;
   padding: 13px 3px;
-  margin-right: 10px;
   text-decoration: none;
   color: inherit;
 }
@@ -115,10 +114,9 @@ body {
   display: flex;
   flex-direction: column;
   width: 150px;
-  margin-bottom: 15px;
-  flex-basis: 20%;
   text-decoration: none;
   color: inherit;
+  margin: 0;
 }
 .device__img {
   width: 150px;
@@ -163,7 +161,9 @@ body {
 
 .devices {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
+  gap: 25px;
 }
 
 .error {
